--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Checkout
         id: checkout
         uses: actions/checkout@v2
-      - name: Install xorg-dev
+      - name: Install XOrgDev
         id: install xorg-dev
         run: |
           sudo apt-get install -y xorg-dev
