fix: CI for Ubuntu :hammer_and_wrench:

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
         id: checkout
         uses: actions/checkout@v2
       - name: Install XOrgDev
-        id: install xorg-dev
+        id: install XOrgDev
         run: |
           sudo apt-get install -y xorg-dev
       - name: Configuring CMake files
